--- a/views/sentMessage.ejs
+++ b/views/sentMessage.ejs
@@ -20,6 +20,9 @@
             <div class = "container">
                     <h3><%=message%></h3>
             </div>
+            <form style="width: 10%;margin: auto;" action="/sendMessage" method="GET">
+                <button class="btn btn-md btn-primary btn-block" type="submit">Go back</button>
+            </form>
         </div>
     </body>
 </html>
