--- a/views/seeMessages.ejs
+++ b/views/seeMessages.ejs
@@ -4,25 +4,53 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Inbox</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1 style="text-align: center;">Inbox of <%= user.name%></h1>
-        <form style="width: 10%;margin: auto;" action="/sendMessage" method="GET">
-            <button class="btn btn-md btn-primary btn-block"  type="submit">Send a message</button>
-        </form>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Inbox</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="#">upgrade your browser</a> to improve your experience.
+      </p>
+    <![endif]-->
+    <h1 style="text-align: center">Inbox of <%= user.name%></h1>
+    <form style="width: 10%; margin: auto" action="/sendMessage" method="GET">
+      <button class="btn btn-md btn-primary btn-block" type="submit">
+        Send a message
+      </button>
+    </form>
+    <table class="table" style="margin-top: 2%;">
+        <thead>
+            <tr>
+              <th scope="col" style="text-align: center;">#</th>
+              <th scope="col" style="text-align: center;">Sender</th>
+              <th scope="col" style="text-align: center;">Content</th>
+            </tr>
+          </thead>
+      <tbody>
         <% for (let i = 0; i < user.messages.length; ++i) { %>
+        <tr>
+            <td><%=i + 1%></td>
+          <td>
             <h3><%=user.messages[i].sender%></h3>
+          </td>
+          <td>
             <p><%=user.messages[i].content%></p>
-        <% } %>
-    </body>
+          </td>
+          <% } %>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
